--- a/FI.WebAtividadeEntrevista/FI.WebAtividadeEntrevista.csproj
+++ b/FI.WebAtividadeEntrevista/FI.WebAtividadeEntrevista.csproj
@@ -129,7 +129,8 @@
     <Compile Include="Models\BeneficiarioModel.cs" />
     <Compile Include="Models\ClienteModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Content Include="Scripts\Clientes\FI.MaskCPF.js" />
+    <Content Include="Scripts\Clientes\FI.Modais.js" />
+    <Content Include="Scripts\Clientes\FI.CPF.js" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\BancoDeDados.mdf" />
