--- a/FI.WebAtividadeEntrevista/FI.WebAtividadeEntrevista.csproj
+++ b/FI.WebAtividadeEntrevista/FI.WebAtividadeEntrevista.csproj
@@ -120,6 +120,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\BeneficiarioController.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -352,6 +354,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\themes\base\minified\images\" />
+    <Folder Include="Views\Beneficiario\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
